* Create a draft guarantee when selling a product with guarantee type
* Add workflow on guarantee

Version 3.4.0 - 2014-11-10
* Initial release